# two-pass-lanczos

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
data/netgen/: README.txt  batch
data/netgen/src/: netgen  netgen.c  random.c
data/qcnd/: pargen  qfcgen
examples/: tradeoff.rs
examples/common/: mod.rs
python/: calculate_growth_rate.py  plot_dense_tradeoff.py  plot_orthogonality.py  plot_results.py  plot_scalability.py  plot_stability.py  plot_tradeoff.py  requirements.txt
results/: accuracy_exp_ill-conditioned.csv  accuracy_exp_well-conditioned.csv  accuracy_exp_well_conditioned.csv  accuracy_inv_ill-conditioned.csv  accuracy_inv_well-conditioned.csv  dense_tradeoff.csv  orthogonality_exp_ill-conditioned.csv  orthogonality_exp_well-conditioned.csv  orthogonality_inv_ill-conditioned.csv  orthogonality_inv_well-conditioned.csv  scalability_k200_rho3.csv  scalability_k300_rho3.csv  scalability_k500_rho3.csv  stability_exp.csv  stability_f_is_z.csv  stability_inv.csv  tradeoff_arcs500k_cq_a.csv  tradeoff_arcs500k_rho1.csv  tradeoff_arcs500k_rho3.csv  tradeoff_arcs50k_rho3.csv  tradeoff_arcs5k_rho3.csv
src/: error.rs  lib.rs  matrix.rs  solvers.rs
src/algorithms/: lanczos.rs  lanczos_two_pass.rs  mod.rs
src/utils/: data_loader.rs  mod.rs  perf.rs
tests/: correctness.rs  properties.rs  proprierties.rs
tex/: ref.bib  report.tex
